+Helper namespace +Helper\PdoConnexion +PageModel::__construct with connexion

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "psr-4": {
             "Controller\\": "src/Controller",
             "View\\": "src/View",
-            "Model\\": "src/Model"
+            "Model\\": "src/Model",
+            "Helper\\": "src/Helper"
         },
         "files": [
             "init.php"
